# spoke

./: .gitignore  .gitmodules  AGENTS.md  CONCEPTS.md  Cargo.toml  README.md  README_CN.md  STRATEGY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
.mstar/: AGENTS.md  notes.json  roadmap.md  status.json
.mstar/iterations/: README.md
.mstar/knowledge/: README.md
.mstar/plans/: 2026-07-23-v0.1-spoke-core-bootstrap.md
.mstar/specs/: spoke-data-model.md  spoke-operations.md  spoke-ops.md  spoke-protocol-layers.md  spoke-protocol.md  spoke-version-release.md
adapters/: README.md
crates/spoke-schema/: Cargo.toml
crates/spoke-schemas/: Cargo.toml
fixtures/toy-world/: README.md  anchor_tw_manuscript.json  evt_tw_harbor_dawn.json  evt_tw_harbor_storm_delay.json  fnd_tw_open.json  kb_tw_harbor.json  kb_tw_harbor_dawn_event.json  kb_tw_mira.json  op_tw_compute_request.json  op_tw_compute_settle_request.json  op_tw_compute_settle_response.json  op_tw_project_request.json  op_tw_project_response.json  package.json  pkt_tw_scope.json  rel_tw_mira_harbor.json  rule_tw_consistency.json  vitest.config.ts
schemas/: README.md
schemas/common/: common.schema.json  error-envelope.schema.json
schemas/data/: assemble-packet.schema.json  event.schema.json  finding.schema.json  keyblock.schema.json  knowledge-entry.schema.json  relation.schema.json  rule.schema.json  source-anchor.schema.json  timeline-event.schema.json
schemas/ops/: assemble-request.schema.json  (+13 more)
specs/: spoke-data-model.md  spoke-ops.md  spoke-protocol.md
(+25 files in other folders)
