[workspace]
members = ["crates/spoke-schema"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["42ch"]
license = "Apache-2.0"
repository = "https://github.com/42ch/spoke"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regress = "0.10"
